// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Card 1`] = `
.c0 {
  background: #fff;
  border-radius: 4px;
  box-shadow: none;
  border: solid 1px #C1C6CC;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  min-width: 200px;
  overflow: hidden;
  -webkit-transition: border 150ms cubic-bezier(0.86,0,0.07,1), box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
  transition: border 150ms cubic-bezier(0.86,0,0.07,1), box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:hover {
  border-color: #C1C6CC;
  box-shadow: none;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`A raised Card 1`] = `
.c0 {
  background: #fff;
  border-radius: 4px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.1),0px 1px 1px rgba(0,0,0,0.05);
  border: solid 1px #C1C6CC;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  min-width: 200px;
  overflow: hidden;
  -webkit-transition: border 150ms cubic-bezier(0.86,0,0.07,1), box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
  transition: border 150ms cubic-bezier(0.86,0,0.07,1), box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:hover {
  border-color: #C1C6CC;
  box-shadow: 0 3px 4px rgba(0,0,0,0.11),0 1px 2px rgba(0,0,0,0.04);
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`A raised Card with a CardMedia block 1`] = `
.c0 {
  background: #fff;
  border-radius: 4px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.1),0px 1px 1px rgba(0,0,0,0.05);
  border: solid 1px #C1C6CC;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  min-width: 200px;
  overflow: hidden;
  -webkit-transition: border 150ms cubic-bezier(0.86,0,0.07,1), box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
  transition: border 150ms cubic-bezier(0.86,0,0.07,1), box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:hover {
  border-color: #C1C6CC;
  box-shadow: 0 3px 4px rgba(0,0,0,0.11),0 1px 2px rgba(0,0,0,0.04);
}

.c1 {
  display: block;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url(http://placekitten.com/200/300);
  overflow: hidden;
  height: 0;
  padding-top: 56%;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;
